
Empire 0.8 (TBD)
=======================
	* MODIFIED: Altered superclass checks to better accommodate auto-generated instances that use EmpireGenerated so users to have to resort to incorrectly using MappedSuperclass
	* MODIFIED: Removed a couple uses of describe and replaced them with direct lookups in the DataSource for the relevant information to help make going to/from RDF more efficient.
	* FIXED: NPE in AsValue function when using a java.net.URI
	* FIXED: Bug in equals method of generated instances
	* FIXED: Bug with using wildcard types in interfaces that are used in the code generation. (issue #70)
	* FIXED: Bug that resulted in class cast exceptions between BNode and URI when the value of a property was a BNode and did not map to a valid bean entity. (issue #71)
	* FIXED: Appended loader path to Javassist ClassPool during instance generation so Empire works better in some servlet containers, notably Tomcat & Glassfish.


Empire 0.7 (2011-11-18)
=======================
	* MODIFIED: Repackaged all DataSource specific classes into the com.clarkparsia.empire.ds package. (issue #25)
	* MODIFIED: Moved some DataSource specific functions from EmpireUtil to DataSourceUtil
	* MODIFIED: Query results can returned proxied objects, allowing users to defer the loading of the results until they
				iterate over them.  Disable/Enabling this feature is controlled via EmpireOptions.
	* MODIFIED: All contains to contains, and persistence operations (merge/persist/remove) in EntityManager have been
				compacted; the amount of calls to the DataSource has been greatly reduced resulting in a large performance
				increase when cascading persistence operations, and a modest increase overall.
	* MODIFIED: Global config passed through to EntityManagers in the unit config so parameters do not have to be duplicated.
	* MODIFIED: Properties mapped as collections, with no values, return empty collections instead of null. (issue #40)