@@ -5,6 +5,7 @@ Empire 0.8 (TBD)
 =======================
 	* MODIFIED: Altered superclass checks to better accommodate auto-generated instances that use EmpireGenerated so users to have to resort to incorrectly using MappedSuperclass
 	* MODIFIED: Removed a couple uses of describe and replaced them with direct lookups in the DataSource for the relevant information to help make going to/from RDF more efficient.
+	* FIXED: Bug when the refreshing and/or re-use of the same bean which is persisted originally, EmpireGenerated information was not correctly updated. (issue #73)
 	* FIXED: NPE in AsValue function when using a java.net.URI
 	* FIXED: Bug in equals method of generated instances
 	* FIXED: Bug with using wildcard types in interfaces that are used in the code generation. (issue #70)
